update app component style

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,19 +3,12 @@
 <main class="main">
   <div class="content">
     <h1>Remote 1</h1>
-    <p>This is the remote 1 application.</p>
-    <img [src]="HOME_SVG_DATA_URI" alt="Home" width="200" />
-    <img src="assets/icons/user.svg" alt="User" width="200" />
+    <div class="row-with-image">
+      <img [src]="HOME_SVG_DATA_URI" alt="Home" class="row-image" />
+      <p class="row-text">This is the remote 1 application.</p>
+    </div>
   </div>
 </main>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
 <router-outlet />
