update svg, app component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 
 <main class="main">
   <div class="content">
-    <h1>Remote 1</h1>
+    <h1>Hello, remote1</h1>
     <div class="row-with-image">
       <img [src]="HOME_SVG_DATA_URI" alt="Home" class="row-image" />
       <p class="row-text">This is the remote 1 application.</p>
